[package]
name = "clustermancer"
version = "0.1.0"
edition = "2021"
authors = ["Maksymilian Neumann<neumann.maks@gmail.com>"]

[dependencies]
rand = "0.8.5"
rand_pcg = "0.3.1"
statrs = "0.17.1"
itertools = "0.13.0"
serde = "1.0.215"
toml = "0.8.19"
dialoguer = "0.11.0"
csv = "1.3.1"
ordered-float = "4.5.0"
